2000-12-03  Havoc Pennington  <hp@pobox.com>

	* gdk/Makefile.am: add gdkkeys.[hc]

	* gdk/gdkkeys.h, gdk/gdkkeys.c: Move all the keyval stuff to these
	files from gdk.h, gdk.c; add GdkKeymap type and operations on it.

	* acconfig.h, configure.in: add checks and command line options
	for XKB

	* gdk/x11/gdkkeys-x11.c: Implement the above functions
	
	* gdk/x11/gdkevents-x11.c (gdk_event_translate): Put the keycode
	and group in the key event

	* gdk/gdkevents.h (struct _GdkEventKey): Add a hardware_keycode
	field with the low-level hardware key code, and a group
	field with the keyboard group

	* gdk/x11/gdkprivate-x11.h: include config.h for HAVE_XKB,
	and declare a couple globals used for keymap handling
	
	* gtk/gtkimcontextsimple.c: Implement ISO 14755 input method,
	hold down Shift-Control and type a hex number to get a Unicode 
	character corresponding to the hex number
	(gtk_im_context_simple_get_preedit_string): Fix cursor position
	(return bytes not chars)

2000-12-05  Elliot Lee  <sopwith@redhat.com>
	* gdk/gdkcolor.h: Make GdkColor specify element sizes
	to avoid waste on 64-bit platforms.

Tue Dec  5 15:49:31 2000  Owen Taylor  <otaylor@redhat.com>

	* INSTALL: Fix link to PNG home, remove reference
	to fribidi.

	* gdk/x11/gdkevents-x11.c: Fix up for new GMain API.
	
	* gdk/win32/gdkevents-win32.c: Fix up for new GMain API. (Not
	tested.)

	* gtk/gtkcheckmenuitem.c: Permanently turn on
	always_show_toggle.

	* gtk/gtkclist.c (gtk_clist_get_pixtext): Allow mask to 
	be NULL. (Vladimir Klebanov, #26545)

	* gtk/gtkspinbutton.c (gtk_spin_button_insert_text): Fix 
	some signed/unsigned comparison problems. (#6510,
	David Kaelbling)

	* gtk/gtkwidget.[ch] (gtk_widget_is_ancestor): Change
	return type to boolean (Oskar Liljeblad, #18648)

2000-12-05  Alexander Larsson  <alexl@redhat.com>

	* gdk/linux-fb/gdkmain-fb.c (gdk_fb_display_new):
	Remove bogus colormap setting.

2000-12-05  Alexander Larsson  <alexl@redhat.com>

	* gdk/linux-fb/gdkcolor-fb.c: